bootstrap añadido eequisde

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,91 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
 body{
-    display: flex;
-    flex-direction: column;
-}
-header{
-    background-color: #353535;
-    height: 15vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-}
-header > div{
-    width:100%;
-    display:flex;
-}
-nav a{
-    text-decoration: none;
-    color: #fff;
-    padding: 1em;
-    font-size: 1.2em;
-    text-align: center;
-    transition: all .3s ease-in-out;
-}
-nav a:hover{
-    background-color: rgb(255, 188, 159);
-    color: #353535;
-}
-.logo{
-    display:block;
-    height:4em;
-    margin:.4em;
-    width:auto;
-}
-.center{
-    text-align: center;
-}
-.inicio{
-    background-image: url(../img/inicio.jpg);
-}
-main{
-    min-height: 80vh;
-    background-color: rgb(124, 65, 29);
+    background-color: blanchedalmond;
 }
 .equipo{
     box-shadow: black 0px 0px 3px 0px;
-}
-section *{
-    margin: 1em;
-}
-main > * {
-    margin-left: .8em;
-    margin-top: .5em;
-    margin-bottom:10vh;
-}
-footer{
-    background-color: #737373;
-    height: 10vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-body {
-    background-color: #272727;
-    color: #fff;
-}
-
-table{
-    width: 100%;
-    border-collapse: collapse;
-}
-ul{
-    margin-left:2em;
-}
-th, td{
-    padding: 0.5em;
-    border: 1px solid #fff;
-}
-tr:nth-child(even){
-    background-color: #3c1515;
 }
