--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,6 +1,35 @@
 body{
     background-color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+}
+main{
+    justify-content: center;
+    align-items: middle;
+}
+footer{
+    height:100%;
+    background-color:aquamarine;
+    flex: 1;
 }
 .equipo{
     box-shadow: black 0px 0px 3px 0px;
+}
+footer{
+    position:relative;
+    bottom:0;
+}
+table{
+    border: 1px solid black;
+    border-collapse: collapse;
+    background-color: rgb(218, 223, 176);
+}
+.registro {
+    border: 2px solid black;
+    border-collapse: collapse;
+    box-shadow: grey 0px 0px 20px 8px;
+    padding: 2em;
+    margin: 2em;
+    width: 40%;
+    background-color: #ffd2ac;
 }
