--- a/public/css/css.css
+++ b/public/css/css.css
@@ -57,7 +57,6 @@ thead{
 .table-head { display:table-row; font-weight: bold;}
 .table-cell { display:table-cell; }
 .registro {
-    border: 2px solid black;
     border-collapse: collapse;
     box-shadow: grey 0px 0px 20px 8px;
     padding: 2em;
@@ -85,4 +84,7 @@ thead{
 .readed:hover{
     background-color: #ffffff;
     color:rgb(157, 157, 157)
+}
+.cabecera-lista{
+    background-color: #ffc18e;
 }
