--- a/public/css/css.css
+++ b/public/css/css.css
@@ -76,6 +76,9 @@ thead{
     width:50%;
     margin:2em;
 }
+.evento-display{
+    box-shadow: 0px 2px 20px 2px black;
+}
 .readed{
     background-color: #f6f6f6;
     opacity: 0.8;
